# urirdp-docker

./: .gitignore  Dockerfile  README.md  pyproject.toml
docs/: ARCHITECTURE.md  MARKPACT.md
markpacts/: urihim.contract.markpact.md  urikvm.contract.markpact.md
scripts/: test-local.sh
tests/: test_decide_dispatch.py  test_env_browser_routes.py  test_env_resolve.py  test_rdp_kvm.py
