[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirdp-docker-example"
version = "0.1.0"
description = "Docker demo for RDP desktop automation (standalone URI packs)"
requires-python = ">=3.10"
dependencies = ["urirdpedge[real]>=0.1.0"]

[project.optional-dependencies]
real = ["litellm>=1.40"]

[tool.uv.sources]
urirdpedge = { path = "../urirdpedge", editable = true }
urirdp = { path = "../urirdp", editable = true }
urioperators = { path = "../urioperators", editable = true }
urikvm = { path = "../urikvm", editable = true }
urihim = { path = "../urihim", editable = true }
uriocr = { path = "../uriocr", editable = true }
urillm = { path = "../urillm", editable = true }
urishell = { path = "../urishell", editable = true }
urienv = { path = "../urienv", editable = true }
uribrowser = { path = "../uribrowser", editable = true }

[project.scripts]
urisys-rdp = "urirdpedge.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
